CUDA C++ Optimal/results/compilation_logs/compile_size_42_reg_32_20252911_1035.txt
========== COMPILATION START ========== 
Parameters: PARAMETR_SIZE=42, MAXREGCOUNT=32 
Compile command: nvcc -O3 -arch=sm_70 -std=c++17 -o aco_cuda_optimized.exe aco_cuda_optimized.cu -Xcompiler "/O2 /fp:fast /openmp /MT" -use_fast_math -lcudart -maxrregcount=32 -Xptxas "-O3,-v" --resource-usage 
 
aco_cuda_optimized.cu(246): warning #68-D: integer conversion resulted in a change of sign
          if (hashTable[idx].key == -1) return -1.0;
                                    ^

Remark: The warnings can be suppressed with "-diag-suppress <warning-number>"

aco_cuda_optimized.cu(257): warning #68-D: integer conversion resulted in a change of sign
          unsigned long long old = atomicCAS(&hashTable[idx].key, -1, key);
                                                                  ^

aco_cuda_optimized.cu(258): warning #68-D: integer conversion resulted in a change of sign
          if (old == -1 || old == key) {
                     ^

aco_cuda_optimized.cu(290): warning #68-D: integer conversion resulted in a change of sign
          hashTable[i].key = -1;
                             ^

aco_cuda_optimized.cu(1579): error: expected an identifier
      int 500 = num_iterations;
          ^

aco_cuda_optimized.cu(1673): error: argument of type "double *" is incompatible with parameter of type "const int *"
              dev_kol_enter,
              ^

aco_cuda_optimized.cu(1683): error: argument of type "HashEntry *" is incompatible with parameter of type "double *"
              dev_hashTable,
              ^

aco_cuda_optimized.cu(1687): error: too many arguments in function call
              dev_hash_fail
              ^

aco_cuda_optimized.cu(2064): warning #2464-D: conversion from a string literal to "char *" is deprecated
          print_metrics(metrics, "4 function ACO 4start", i);
                                 ^

aco_cuda_optimized.cu(2076): warning #2464-D: conversion from a string literal to "char *" is deprecated
          print_metrics(metrics, "Original ACO 3start", i);
                                 ^

aco_cuda_optimized.cu(2089): warning #2464-D: conversion from a string literal to "char *" is deprecated
          print_metrics(metrics, "Combined Run 2start", i);
                                 ^

aco_cuda_optimized.cu(2102): warning #2464-D: conversion from a string literal to "char *" is deprecated
          print_metrics(metrics, "Unified Run 1start", i);
                                 ^

4 errors detected in the compilation of "aco_cuda_optimized.cu".
aco_cuda_optimized.cu
========== COMPILATION END ========== 
Exit code: 2 
